# australian-situation

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile.rust  README.md  docker-compose.yml  eslint.config.mjs  package.json  run-all.sh  tsconfig.base.json
.github/workflows/: ci.yml  rust.yml
apps/api/: package.json  vitest.config.ts
apps/api/data/: live-store.json
apps/api/scripts/: export-openapi.ts
apps/api/src/: app.ts  index.ts  openapi.ts
apps/api/tests/: ai-deflation-overview.test.ts  api-domain-constants.test.ts  cors.test.ts  data-backend-selector.test.ts  energy-compare.test.ts  energy-household-estimate.test.ts  energy-live-wholesale.test.ts  energy-overview.test.ts  energy-retail-average-repository.test.ts  energy-retail-average.test.ts  energy-wholesale-aggregation.test.ts  error-handling.test.ts  freshness-utils.test.ts  health.test.ts  housing-overview.test.ts  live-data-contract.test.ts  live-data-latest-selection.test.ts  live-store-repository.test.ts  (+12 more)
apps/ingest/: package.json
apps/web/: components.json  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
crates/aus-api/: Cargo.toml
crates/aus-api/src/: app.rs  auth.rs  dto.rs  error.rs  main.rs  openapi.rs
crates/aus-api/src/routes/: energy.rs  health.rs  housing.rs  metadata.rs  mod.rs  prices.rs  series.rs
crates/aus-cli/: Cargo.toml
crates/aus-cli/src/: config.rs  main.rs
crates/aus-cli/src/commands/: energy.rs  health.rs  housing.rs  metadata.rs  prices.rs  series.rs
crates/aus-db/: Cargo.toml
crates/aus-db/migrations/: 20240101000000_initial.sql  20240201000000_observations_extra_cols.sql  20240301000000_ingestion_runs_extra_cols.sql  20240401000000_price_warehouse.sql  20240501000000_products_extra_cols.sql
crates/aus-db/src/: models.rs  pool.rs
crates/aus-db/src/queries/: cursors.rs  ingestion_runs.rs  mod.rs  observations.rs  price_warehouse.rs  snapshots.rs  sources.rs
crates/aus-domain/: Cargo.toml
crates/aus-ingest/: Cargo.toml
crates/aus-ingest/src/: main.rs  retry.rs  scheduler.rs
crates/aus-ingest/src/jobs/: cpi.rs  energy_generation_mix.rs  energy_nem_mix.rs  energy_retail.rs  energy_wem_mix.rs  energy_wholesale.rs  global_retail.rs  global_wholesale.rs  housing.rs  interest_rates.rs  major_goods.rs  mod.rs  normalization.rs
crates/aus-ingest/src/mappers/: energy.rs  housing.rs  mod.rs
crates/aus-sources/: Cargo.toml
crates/aus-sources/src/: error.rs  fetch.rs  lib.rs
crates/aus-sources/src/au/: abs.rs  aemo.rs  aemo_nem_mix.rs  aemo_wem_mix.rs  aer.rs  dcceew.rs  mod.rs  rba.rs
crates/aus-sources/src/intl/: beijing.rs  eia.rs  entsoe.rs  eurostat.rs  mod.rs  nea_china.rs  pln.rs  world_bank.rs
crates/aus-sources/src/parsers/: csv_parser.rs  html.rs  mod.rs
crates/aus-sources/src/prices/: major_goods.rs  mod.rs
data/: live-store.json
docs/: ai-deflation-au-made-prd-tdd.md  api-energy-comparison-v1.md  dashboard-readability-prd-tdd.md  dashboard-real-data-map.md  data-pipeline-hardening-prd-tdd.md  heyapi-sdk-cli-prd-tdd.md  implementation-roadmap-electricity-prices-aus-global.md  ingest-bullmq-operations-runbook.md  issue-bullmq-ingest-breakdown-v1.md  issue-bullmq-ingest-upgrade-v1.md  kpi-definitions-electricity-prices-aus-global-v1.md  live-ingestion-implementation-checklist.md  postgres-api-abstraction-prd-tdd.md  postgres-drizzle-implementation-checklist.md  prd-electricity-prices-aus-vs-global-v1.md  prd-housing-energy-v1.md  prd-housing-v1.md  prd-live-ingestion-v1.md  prd-postgres-drizzle-migration-v1.md  prd-tdd-australia-sector-map-v1.md  price-index-db-structure.md  price-index-prd-tdd.md  price-pipeline-hardening-prd-tdd.md  repo-gap-remediation-prd-tdd.md  repo-layout.md  roadmap-housing-energy.md  scalable-dashboard-ux-prd-tdd.md  tdd-plan-electricity-prices-aus-global-v1.md  tdd-plan-housing-energy-v1.md  tdd-plan-housing-v1.md  tdd-plan-live-ingestion-v1.md  tdd-plan-postgres-drizzle-migration-v1.md
research_comparison_expansion/: findings_china_proxy_followup.md  findings_implementation.md  findings_retail.md  findings_wholesale.md  research_plan.md  research_plan_china_followup.md  research_report.md
research_electricity_prices_api_scope/: research_plan.md  research_report.md
scripts/: seed-from-store.py  test-postgres.sh  typecheck.sh
tests/e2e/: README.md  package.json  playwright.config.ts
(+178 files in other folders)
