[workspace]
resolver = "2"
members = [
    "crates/aus-domain",
    "crates/aus-db",
    "crates/aus-sources",
    "crates/aus-api",
    "crates/aus-ingest",
    "crates/aus-cli",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
# Core
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Types
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rust_decimal = { version = "1", features = ["serde-str"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "rust_decimal", "migrate"] }

# HTTP
axum = { version = "0.8", features = ["macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# OpenAPI
utoipa = { version = "5", features = ["chrono", "uuid", "decimal"] }
utoipa-axum = "0.2"
utoipa-redoc = { version = "5", features = ["axum"] }

# Scheduler
tokio-cron-scheduler = "0.13"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Parsing
csv = "1"
scraper = "0.22"

# Testing
insta = { version = "1", features = ["json", "redactions"] }

# Internal crates
aus-domain = { path = "crates/aus-domain" }
aus-db = { path = "crates/aus-db" }
aus-sources = { path = "crates/aus-sources" }
aus-api = { path = "crates/aus-api" }
aus-ingest = { path = "crates/aus-ingest" }
