[package]
name = "aus-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "aus-api"
path = "src/main.rs"

[dependencies]
aus-domain = { workspace = true }
aus-db = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-redoc = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = "0.22"
chrono = { workspace = true }
rust_decimal = { workspace = true }
sqlx = { workspace = true }
