[package]
name = "aus-db"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
aus-domain = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
