[package]
name = "aus-sources"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
aus-domain = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
csv = { workspace = true }
scraper = { workspace = true }
async-trait = "0.1"
regex = "1"
